fixed css that was causing the nav not to show up in Safari on ios

--- a/sass/components/_panorama-navigation.scss
+++ b/sass/components/_panorama-navigation.scss
@@ -33,6 +33,7 @@
     max-width: 15000px;
     min-width: 100%;
     transform: none;
+    overflow: visible;
   }
 
   #nav_header {
